Slight HTML alignment changes...

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -101,7 +101,7 @@
 
 
                 <form method="get" action="search" >
-                LANGUAGE:
+                LANGUAGE: &nbsp
                        <select id="dLanguages" name = "language" required>
                             <option selected="selected" disabled="disabled">Select a Language</option>
 
@@ -112,7 +112,7 @@
 
 
 
-                    DIFFICULTY:
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp DIFFICULTY: &nbsp
                 <select required id="dDifficulty" name = "difficulty" >
                     <option selected="selected" disabled="disabled">Select a Difficulty</option>
 
