--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -66,23 +66,19 @@
     <!-- /.container-fluid -->
 </nav>
 
-<datalist id="languages">
-  <option value="NICisfag">
-  <option value="CSS">
-  <option value="JavaScript">
-  <option value="Java">
-  <option value="Ruby">
-  <option value="PHP">
-  <option value="Go">
-  <option value="Erlang">
-  <option value="Python">
-  <option value="C">
-  <option value="C#">
-  <option value="C++">
-</datalist>
 
-<input type="text" list="languages">
-<datalist id="json-datalist"></datalist>
+
+<datalist id="json-datalist">
+
+    {% for tag in tag_list %}
+            <option value="{{ tag }}">
+    {% endfor %}
+
+    {% for question in question_list %}
+        <option value="{{ question.title }}">
+    {% endfor %}
+
+</datalist>
 
 <!-- Header -->
 <header>
@@ -122,7 +118,7 @@
                 </select>
 
                     <p><br></p>
-                    <input type="text" id="searchBox" list="languages" class="input-medium" name="q" placeholder="Search..." >
+                    <input type="text" id="searchBox" list="json-datalist" class="input-medium" name="q" placeholder="Search..." >
                 <datalist id="json-datalist"></datalist>
 
                     <input type="submit" class="btn" value="Search" >
