--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -73,6 +73,17 @@
     <!-- /.container-fluid -->
 </nav>
 
+<datalist id="json-datalist">
+
+    {% for tag in tag_list %}
+            <option value="{{ tag }}">
+    {% endfor %}
+
+    {% for question in question_list %}
+        <option value="{{ question.title }}">
+    {% endfor %}
+
+</datalist>
 
 <!-- Header -->
 <header>
@@ -108,7 +119,8 @@
                 </select>
 
                     <p><br></p>
-                    <input type="text" id="searchBox"  class="input-medium" name="q" placeholder="Search..." >
+                    <input type="text" id="searchBox" list="json-datalist" class="input-medium" name="q" placeholder="Search..." >
+                    <datalist id="json-datalist"></datalist>
                     <input type="submit" class="btn" value="Search" >
                 </form>
 
