lOGIN works but not secure

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -30,6 +30,18 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+
+        function validateForm()
+        {
+        var x=document.forms["login"]["username"].value;
+        if (x==null || x=="")
+          {
+          alert("Please fill out the username");
+          return false;
+          }
+        }
+    </script>
 
 </head>
 
@@ -55,12 +67,26 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li class="page-scroll">
-                    <a href="/admin/">Login</a>
+                <li >
+                    <section class="loginform cf">
+                        <form name="login" action="" method="get" accept-charset="utf-8">
+                          <ul>
+                            <input id="username" type="username" name="username" placeholder="Username" required></li>
+                            <input id="password" type="password" name="password" placeholder="Password" required></li>
+                            <input type="submit" value="Login"></li>
+                          </ul>
+                        </form>
+                    </section>
                 </li>
 
             </ul>
         </div>
+
+        <script>
+            var user = [document.getElementById("username").value,
+              document.getElementById("password").value];
+
+        </script>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
@@ -134,6 +160,11 @@
     </div>
 </header>
 
+<h1>
+    {% if user %}
+        <h1>FUCK YEA</h1>
+    {% endif %}
+</h1>
 
 <!-- Footer -->
 <footer class="text-center">
