--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -150,6 +150,37 @@ html{
     background-color: #31708f;
 }
 
+.loginform ul {
+  padding: 0;
+  margin: 0;
+
+
+}
+.loginform li {
+  display: inline;
+  float: left;
+
+}
+label {
+  display: block;
+  color: #fff;
+}
+.cf:before,
+.cf:after {
+    content: "";
+    display: table;
+}
+
+.loginform{
+    background-color: #2C3E50;
+}
+input{
+    background-color: #fff !important;
+}
+
+
+
+
 
 
 
