Login + invisible questions work

--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -62,8 +62,18 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li class="page-scroll">
-                    <a href="/admin/">Login</a>
+                <li >
+                    <section class="loginform cf">
+
+                        <form name="login" action="" method="post" accept-charset="utf-8">
+                            {% csrf_token %}
+                          <ul>
+                            <input id="username" type="username" name="username" placeholder="Username" required></li>
+                            <input id="password" type="password" name="password" placeholder="Password" required></li>
+                            <input type="submit" value="Login"></li>
+                          </ul>
+                        </form>
+                    </section>
                 </li>
 
             </ul>
