CSS for search button changed so its legible

--- a/ProblemFinder/static/problemfinder/css/custom.css
+++ b/ProblemFinder/static/problemfinder/css/custom.css
@@ -175,13 +175,16 @@ label {
 .loginform{
     background-color: #2C3E50;
 }
+
 input{
     background-color: #fff !important;
 }
 
 
 
-
+.btn{
+    color: #2b542c;
+}
 
 
 
