--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -2,7 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -10,9 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Finding Problems</title>
-
 
     {# Importing CSS #}
     <link rel="stylesheet" type="text/css" href="{% static 'problemfinder/css/custom.css' %}"/>
@@ -24,30 +21,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script>
-
-        function validateForm()
-        {
-        var x=document.forms["login"]["username"].value;
-        if (x==null || x=="")
-          {
-          alert("Please fill out the username");
-          return false;
-          }
-        }
-    </script>
-
 </head>
 
 <body id="page-top" class="index">
-
-
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
@@ -59,15 +35,14 @@
             </button>
             <a class="navbar-brand" href="/">Finding Problems</a>
         </div>
-        {#   <a class="bottom-right pull-right" href="/admin/">Login</a> #}
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
                 <li >
+                <!-- Login bar functionality-->
                     {% if user_flag %}
 
                         <h5><span style="color:#fff">Hello, </span><span style="color:#18BC9C">{{ user_value }}&nbsp&nbsp</span></h5>
@@ -95,37 +70,28 @@
                         </form>
                     </section>
                     {% endif %}
-
                 </li>
-
             </ul>
         </div>
 
         <script>
             var user = [document.getElementById("username").value,
               document.getElementById("password").value];
-
         </script>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
 
 
-
+<!-- Dynamic Predictive Search functionality-->
 <datalist id="json-datalist">
-
     {% for tag in tag_list %}
             <option value="{{ tag }}">
     {% endfor %}
-
     {% for question in question_list %}
         <option value="{{ question.title }}">
     {% endfor %}
-
 </datalist>
 
-<!-- Header -->
 <header>
     <div class="container" align="center">
         <div class="row">
@@ -139,8 +105,6 @@
 
                 <p><br><br></p>
 
-
-
                 <form method="get" action="search" >
                 LANGUAGE: &nbsp
                        <select id="dLanguages" name = "language" required>
@@ -150,8 +114,6 @@
                         <option value="{{ entry }}">{{ entry }}</option>
                     {% endfor %}
                 </select>
-
-
 
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp DIFFICULTY: &nbsp
                 <select required id="dDifficulty" name = "difficulty" >
@@ -179,10 +141,7 @@
     </div>
 </header>
 
-
-<!-- Footer -->
 <footer class="text-center">
-
     <div class="footer-below">
         <div class="container">
             <div class="row">
@@ -194,26 +153,12 @@
     </div>
 </footer>
 
-
-
-
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
 </script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-
-
-<!-- jQuery -->
 <script src="{% static 'problemfinder/js/jquery.min.js' %}"></script>
-
-<!-- Bootstrap Core JavaScript -->
 <script src="{% static 'problemfinder/js/bootstrap.min.js' %}"></script>
-
 <script src="{% static 'problemfinder/js/custom.js' %}"></script>
-
-
-<!-- Plugin JavaScript -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
 </body>
-
 </html>
