--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -2,17 +2,13 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Finding Problems</title>
-
 
     {# Importing CSS #}
     <link rel="stylesheet" type="text/css" href="{% static 'problemfinder/css/custom.css' %}"/>
@@ -25,19 +21,11 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-
+{#    Anchor Scrolling#}
   <script type="text/javascript">
       function moveWin()
       {
         window.scroll(0,654);
-
       }
       </script>
 </head>
@@ -47,7 +35,6 @@
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
@@ -55,14 +42,13 @@
             </button>
             <a class="navbar-brand" href="/">Finding Problems</a>
         </div>
-        {#   <a class="bottom-right pull-right" href="/admin/">Login</a> #}
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
+            <!-- Login bar functionality-->
                 <li >
                     {% if user_flag %}
 
@@ -80,7 +66,6 @@
 
                         {% else %}
                         <section class="loginform cf">
-
                         <form name="login" action="" method="post" accept-charset="utf-8">
                             {% csrf_token %}
                           <ul>
@@ -93,18 +78,13 @@
                     {% endif %}
 
                 </li>
-
-
-
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
 
+<!-- Dynamic Search bar suggestions-->
 <datalist id="json-datalist">
-
     {% for tag in tag_list %}
             <option value="{{ tag }}">
     {% endfor %}
@@ -112,10 +92,9 @@
     {% for question in question_list %}
         <option value="{{ question.title }}">
     {% endfor %}
-
 </datalist>
 
-<!-- Header -->
+
 <header>
     <div class="container" align="center">
         <div class="row">
@@ -126,12 +105,11 @@
                     <hr class="star-light">
                     <span class="skills">Difficulty - Algorithm - Language</span>
                 </div>
-
                 <p><br><br></p>
             </div>
 
-
                 <form method="get" action="search" >
+
                     LANGUAGE: &nbsp
                     <select id="dLanguages" name = "language" required>
                            <option selected="selected" disabled="disabled">Select a Language</option>
@@ -139,6 +117,7 @@
                         <option value="{{ entry }}">{{ entry }}</option>
                     {% endfor %}
                 </select>
+
                      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp DIFFICULTY: &nbsp
                 <select required id="dDifficulty" name = "difficulty" >
                     <option selected="selected" disabled="disabled">Select a Difficulty</option>
@@ -148,6 +127,7 @@
                     {% endfor %}
                 </select>
 
+                <!-- Search Bar-->
                     <p><br></p>
                     <input type="text" id="searchBox" list="json-datalist" class="input-medium" name="q" placeholder="Search..." >
                     <datalist id="json-datalist"></datalist>
@@ -182,6 +162,7 @@
                 <p style="font-size:18px !important;" class="searchTitle">Language: {{ languagesel }} <p><br></p></p>
             {% endif %}
 
+    <!-- Dynamic Search Results-->
         {%  block content %}
 
                 {% if not question_list %}
@@ -258,25 +239,15 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-4">
-
-                    {#  Add footer content#}
-
                 </div>
                 <div class="footer-col col-md-4">
-
-                    {#  Add footer content#}
                     <a href="/" class="btn btn-primary btn-lg " role="button" >Hide Results</a>
-
                 </div>
                 <div class="footer-col col-md-4">
-
-                    {#  Add footer content#}
-
                 </div>
             </div>
         </div>
     </div>
-
 
     <div class="footer-below">
         <div class="container">
@@ -287,20 +258,11 @@
             </div>
         </div>
     </div>
+</footer>
 
-
-<!-- jQuery -->
 <script src="{% static 'problemfinder/js/jquery.min.js' %}"></script>
-
-<!-- Bootstrap Core JavaScript -->
 <script src="{% static 'problemfinder/js/bootstrap.min.js' %}"></script>
-
 <script src="{% static 'problemfinder/js/custom.js' %}"></script>
-
-
-<!-- Plugin JavaScript -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
 </body>
-
 </html>
