Haven't gotten the search input done. But new search algorithm and lots of code docs  --Jayan Smart

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -21,6 +21,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
 
+    <script language="text/javascript">
+
+    </script>
+
 </head>
 
 <body id="page-top" class="index">
@@ -125,15 +129,17 @@
                     </select>
 
                         <p><br></p>
-                        <input type="text" id="searchBox" list="json-datalist" class="input-medium" name="q" placeholder="Search..." >
+                        <input type="text" id="searchBox" list="json-datalist" class="input-medium" name="query"
+                               placeholder="Search..." >
                     <datalist id="json-datalist"></datalist>
 
-                        <input type="submit" class="btn" value="Search" >
-                </form>
+                    <input type="submit" class="btn" value="Add" >
 
-                <div>
-{#                    This will be the are that shows the added search algorithms #}
-                </div>
+
+
+
+
+                </form>
 
                 <p><br></p>
 
