One line of CSS

--- a/ProblemFinder/templates/problemfinder/index.html
+++ b/ProblemFinder/templates/problemfinder/index.html
@@ -182,9 +182,9 @@
 
 
 
-{#               <button type="button" onclick="scrollWin()" class="btn btn-primary" href="search.html">#}
-{#                    <a href="search">Show All Questions</a>#}
-{#                </button>#}
+               <button type="button" onclick="scrollWin()" class="btn btn-primary" href="search.html">
+                   <a href="search">Show All Questions</a>
+                </button>
             </div>
         </div>
     </div>
