--- a/ProblemFinder/templates/problemfinder/search.html
+++ b/ProblemFinder/templates/problemfinder/search.html
@@ -188,9 +188,9 @@
 
                 <p><br></p>
 
-{#                <button type="button" class="btn btn-primary" href="search.html">#}
-{#                    <a href="search">Show All Questions</a>#}
-{#                </button>#}
+                <button type="button" class="btn btn-primary" href="search.html">
+                    <a href="search">Show All Questions</a>
+               </button>
 
             </div>
         </div>
